# ha-sync

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json  settings.local.json
.github/workflows/: ci.yml  publish.yml
HAWatchApp/: HAWatchWidgetExtension.entitlements  Package.swift  project.yml
HAWatchApp/Assets.xcassets/AppIcon.appiconset/: Contents.json
HAWatchApp/WatchApp/: ContentView.swift  HAWatchApp.swift  Info.plist
HAWatchApp/WatchApp/Platform/: ImageCache.swift  KeychainService.swift  SettingsSync.swift  WatchConnectivityManager.swift
HAWatchApp/WatchApp/ViewModels/: DashboardViewModel.swift
HAWatchApp/WatchApp/Views/: DashboardListView.swift  ViewPageView.swift
HAWatchApp/WatchApp/Widgets/: ComplicationConfigIntent.swift  ControlToggleWidget.swift  EntityComplication.swift  HAEntity.swift  HAWatchWidgetBundle.swift  Info.plist
HAWatchApp/iPhoneApp/: CompanionRootView.swift  ComplicationConfigView.swift  DashboardPickerView.swift  HAWatchCompanionApp.swift  Info.plist  SettingsView.swift  SetupFlowView.swift  WatchStatusView.swift
plans/: watchos-compliance.md  watchos-plan-agent-a708677.md  watchos-plan-agent-a7dd926.md  watchos-plan.md  watchos.md
src/ha_sync/: cli.py  client.py  config.py  models.py  render.py  render_models.py  swiftbar.py  utils.py
src/ha_sync/sync/: automations.py  base.py  config_entries.py  (+7 more)
tests/: conftest.py  test_automations.py  test_cli.py  test_client.py  test_dashboards.py  test_models.py  test_render_models.py  test_scenes.py  test_scripts.py  test_three_way.py  test_utils.py
(+50 files in other folders)
